# sqlite3_simple

./: .gitmodules  .metadata  .pubignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build-ios.sh  cliff.toml  download_release.dart  pubspec.yaml  update-version.py  zdic.txt
.github/scripts/: extract_changelog.py
.github/workflows/: simple.yml  web.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
darwin/: libsimple.dylib  sqlite3_simple.podspec
darwin/Classes/: Sqlite3SimplePlugin.swift
doc/: web.md
example/: .gitignore  README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/pinyin_dict/: simple_default.txt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: dao.dart  dropdown.dart  main.dart  main_provider.dart  sqlite3.dart
example/lib/component/: highlight_text.dart
example/lib/data/: db_manager.dart  db_manager_kind.dart  main_table_dao.dart  main_table_row.dart  main_table_schema.dart  modifiable_notifier.dart  pinyin_dict_kind.dart
example/lib/data/impl/: kind.dart  pinyin_dict.dart  sqflite_common_ffi_impl.dart  sqlite3_impl.dart
example/lib/data/impl_web/: fetch.dart  kind.dart  pinyin_dict.dart
example/lib/util/: custom_text.dart  random_words.dart  zero_width_text.dart
example/lib/utils/: padding.dart  zero_width.dart  zero_width_text.dart
example/lib/widget/: chip_radio_group.dart  dropdown.dart  expand_collapse_strip.dart  highlight_text.dart  search_input.dart  search_option_radio_row.dart  search_result_dialog.dart  search_result_list.dart  size_transition_expand_column.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/: .gitignore  Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/ohos/: build-profile.json5  oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/entry/: oh-package.json5
example/web/: flutter_bootstrap.js  index.html  manifest.json  sqlite3.wasm  sqlite3_wasm.web.g.dart.js  sqlite3_web_worker.dart.js
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: sqlite3_simple.podspec
ios/Classes/: Sqlite3SimplePlugin.swift
lib/: assets.dart  jieba_dict.dart  jieba_dict_type.dart  sqlite3_simple.dart  web.dart
lib/src/: jieba_dict.dart  sqlite3_simple.dart
lib/src/common/: jieba_dict_assets.dart  jieba_dict_type.dart
lib/src/io/: assets_path.dart  jieba_dict_assets.dart  sqlite3_simple.dart
lib/src/web/: assets_path.dart  bridge_callbacks.dart  bridge_callbacks_default.dart  loader_default.dart
linux/: CMakeLists.txt
macos/: libsimple.dylib  sqlite3_simple.podspec
ohos/: build-profile.json5  index.ets  oh-package.json5
ohos/har/: simple_native_ohos.har
ohos/src/main/: module.json5
ohos/src/main/cpp/: CMakeLists.txt
scripts/: download_release.dart  extract_changelog.py  pubspec.yaml  update_version.dart  update_version.py
src/android/: README.md  gradle.properties  settings.gradle.kts
src/android/gradle/: libs-test.versions.toml  libs.versions.toml
src/android/simple-native-android/: build.gradle.kts
src/ohos/: README.md  build-profile.json5  oh-package.json5  publish.exp
src/ohos/AppScope/: app.json5
src/ohos/simple_native_ohos/: CHANGELOG.md  Index.ets  NOTICE  README.md  build-profile.json5  oh-package.json5
src/web/: build_wasm.dart  build_wasm.ps1  pubspec.yaml  sqlite3_wasm_build.patch
windows/: CMakeLists.txt
(+51 files in other folders)
